# pedalboard

./: .gitignore  .gitmodules  README.md  data-preset2.txt  data.txt  hof.py  message.py  sysex.json  sysex.py  toneprint_capture.py
.zed/: settings.json  tasks.json
cpp/: CMakeLists.txt  build.sh  capture.cpp
cpp/include/: midi.hpp  toneprint.hpp
cpp/src/: bridge.cpp  capture.cpp  midi.cpp
python/: midi.py  sysex.json
